cloud/istio/ssh-multiplex/single-port/2.1-ssh-over-http-with-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: openssh-server
    image: lscr.io/linuxserver/openssh-server:9.3_p2-r0-ls136
    ports:
    - containerPort: 2222
  - name: http-proxy
    image: nginx:1.21.3
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: config-volume
      mountPath: /etc/nginx/nginx.conf
      subPath: nginx.conf
  volumes:
  - name: config-volume
    configMap:
      name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ssh-multiplex
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssh-multiplex
spec:
  hosts:
  - "*"
  gateways:
  - default/ssh-multiplex-gateway
  http:
  - route:
    - destination:
        host: ssh-multiplex.default.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssh-multiplex-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
