cloud/istio/ssh-multiplex/single-port/3-chisel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: openssh-server
    image: lscr.io/linuxserver/openssh-server:9.3_p2-r0-ls136
    ports:
    - containerPort: 2222
  - name: tcp-tunnel-over-http
    image: jpillora/chisel:1.9.1
    args: ["server", "--port", "8080", "--proxy", "tcp://localhost:2222"]
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ssh-multiplex
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssh-multiplex
spec:
  hosts:
  - "*"
  gateways:
  - default/ssh-multiplex-gateway
  http:
  - route:
    - destination:
        host: ssh-multiplex.default.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssh-multiplex-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
